re re fix right margin whitespace on mobile

--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ input:focus {
 }
 
 @media only screen and (max-width: 1060px) {
-    body {
+    html, body {
         overflow-x: hidden;
     }
 
